k8/metrics-bridge-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-bridge-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  ingressClassName: nginx
  rules:
    - host: metrics-bridge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-bridge-svc
                port:
                  number: 3001
